# vending_machine

./: CMakeLists.txt  main.cpp
src/: machine.cpp  machine.h  utils.cpp  utils.h
src/bar/: BarLine.cpp  BarLine.h  BarSlot.cpp  BarSlot.h
src/cash/: CashBox.cpp  CashBox.h
src/client/: Client.cpp  Client.h
src/filler/: StorageFiller.cpp  StorageFiller.h
src/handlers/: MouseHandler.cpp  MouseHandler.h
src/helpers/filler/: StorageFiller.cpp  StorageFiller.h
src/helpers/visualization/: Visualler.cpp  Visualler.h
src/interfaces/bar/: BarLine.h  BarSlot.cpp  BarSlot.h
src/interfaces/keypad/: Keypad.cpp  Keypad.h
src/interfaces/tray/: SnackTray.cpp  SnackTray.h
src/item/: Item.cpp  Item.h  Snack.cpp  Snack.h
src/keypad/: Keypad.cpp  Keypad.h
src/objects/client/: Client.cpp  Client.h
src/objects/item/: Item.cpp  Item.h
src/processors/cash/: CashBox.cpp  CashBox.h
src/processors/storage/: BarStorage.cpp  BarStorage.h
src/snack/: Snack.cpp  Snack.h
src/storage/: BarStorage.cpp  BarStorage.h
src/visualization/: Visualler.cpp  Visualler.h
